# quant-news

./: .env.example  .gitignore  .pre-commit-config.yaml  HISTORICAL_FETCH_GUIDE.md  METRICS.md  PROJECT.md  README.md  app.py  config.py  fetch_alpha_vantage.py  fetch_stock_for_news_range.py  plotly-cloud.toml  pyproject.toml  requirements-dev.txt  requirements.txt  test_alpha_vantage_params.py  test_historical_fetch.py  test_quick.py  test_ui.py
.claude/: settings.md
assets/: styles.css
callbacks/: __init__.py  chart_callbacks.py
layouts/: __init__.py  components.py  main_layout.py
services/: __init__.py  analytics.py  cache_service.py  llm_service.py  news_service.py  stock_data.py
tests/: __init__.py
utils/: __init__.py
